# cowexcept

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/cowexcept/: __init__.py  auto.py
