[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cowexcept"
version = "1.3.1"
description = "Spice up those exceptions with cowexcept!"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["cowsay"]
authors = [{ name = "James Finnie-Ansley" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/James-Ansley/cowexcept"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
